--- a/netty-kafka-chat-server/src/main/resources/style_old.css
+++ b/netty-kafka-chat-server/src/main/resources/style_old.css
@@ -1,41 +1,47 @@
 * {
     margin: 0;
     padding: 0;
-  }
-  
-  body {
-    margin: 20px auto;
-    font-family: "Lato";
-    font-weight: 830;
-  }
-  
-  form {
+}
+
+body {
+    /* margin: 20px auto;
+     font-family: ;
+     font-weight: 830;
+ */
+    background: #C5DDEB;
+    font: 14px/20px Arial,  sans-serif;
+    padding: 40px 0;
+    color: white;
+}
+
+form {
     padding: 15px 25px;
     display: flex;
     gap: 10px;
     justify-content: center;
-  }
-  
-  form label {
+}
+
+form label {
     font-size: 1.5rem;
     font-weight: bold;
-  }
-  
-  input {
-    font-family: "Lato";
-  }
-  
-  a {
+}
+
+input {
+    font-family: Arial;
+}
+
+a {
     color: #0000ff;
     text-decoration: none;
-  }
-  
-  a:hover {
+}
+
+a:hover {
     text-decoration: underline;
-  }
-  
-  #wrapper,
-  #loginform {
+}
+
+#wrapper,
+#loginform {
+    /*
     margin: 0 auto;
     padding-bottom: 25px;
     background: #eee;
@@ -43,20 +49,30 @@
     max-width: 100%;
     border: 2px solid #212121;
     border-radius: 4px;
-  }
-  
-  #loginform {
+     */
+    margin: 0 auto;
+    width: 750px;
+    background: #444753;
+    border-radius: 5px;
+}
+
+.people-list {
+    width: 260px;
+    float: left;
+}
+
+#loginform {
     padding-top: 18px;
     text-align: center;
-  }
-  
-  #loginform p {
+}
+
+#loginform p {
     padding: 15px 25px;
     font-size: 1.4rem;
     font-weight: bold;
-  }
-  
-  #chatbox {
+}
+
+#chatbox {
     text-align: left;
     margin: 0 auto;
     margin-bottom: 25px;
@@ -65,69 +81,69 @@
     height: 600px;
     width: 530px;
     border: 1px solid #a7a7a7;
-    overflow: auto;
+    overflow-y: scroll;
     border-radius: 4px;
     border-bottom: 4px solid #a7a7a7;
-  }
-  
-  #usermsg {
+}
+
+#usermsg {
     flex: 1;
     border-radius: 4px;
     border: 1px solid #2d2fb1;
-  }
-  
-  #name {
+}
+
+#name {
     border-radius: 4px;
     border: 1px solid #2d2fb1;
     padding: 2px 8px;
-  }
-  
-  #submitmsg,
-  #enter{
+}
+
+#submitmsg,
+#enter {
     background: #5c5eee;
     border: 2px solid #2d2fb1;
     color: white;
     padding: 4px 10px;
     font-weight: bold;
     border-radius: 4px;
-  }
-  
-  .error {
+}
+
+.error {
     color: #ff0000;
-  }
-  
-  #menu {
+}
+
+#menu {
     padding: 15px 25px;
     display: flex;
-  }
-  
-  #menu p.welcome {
+}
+
+#menu p.welcome {
     flex: 1;
-  }
-  
-  a#exit {
+}
+
+a#exit {
     color: white;
     background: #a7a1a1;
     padding: 4px 8px;
     border-radius: 4px;
     font-weight: bold;
-  }
-  
-  .msgln {
+}
+
+.msgln {
     margin: 0 0 5px 0;
-  }
-  
-  .msgln span.left-info {
+}
+
+.msgln span.left-info {
     color: orangered;
-  }
-  
-  .msgln span.chat-time {
+}
+
+.msgln span.chat-time {
     color: #666;
     font-size: 60%;
     vertical-align: super;
-  }
-  
-  .msgln b.user-name, .msgln b.user-name-left {
+}
+
+.msgln b.user-name, .msgln b.user-name-left {
     font-weight: bold;
     background: #546e7a;
     color: white;
@@ -135,8 +151,8 @@
     font-size: 90%;
     border-radius: 4px;
     margin: 0 5px 0 0;
-  }
-  
-  .msgln b.user-name-left {
+}
+
+.msgln b.user-name-left {
     background: orangered;
-  }
+}
